# api/v1alpha/openapi-authz-v1alpha.yaml
@@ -72,6 +72,70 @@ paths:
               schema:
                 $ref: '#/components/schemas/rpcStatus'
       x-codegen-request-body-name: body
+  /v1alpha/orgs/{orgId}/entitlements/{serviceId}:
+    post:
+      tags:
+      - LicenseService
+      summary: Entitle an Org access through a seat based license for a service.
+      description: |
+        Grants a given Org a seat based license to a given service. A maximum number of entitled seats
+      operationId: LicenseService_EntitleOrg
+      parameters:
+      - name: orgId
+        in: path
+        description: the ID of an org to entitle
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: serviceId
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EntitleOrgRequest'
+        required: true
+      responses:
+        "200":
+          description: A successful response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1alphaEntitleOrgResponse'
+        "401":
+          description: Returned when no valid identity information provided to a protected
+            endpoint.
+          content:
+            application/json:
+              schema:
+                type: object
+        "403":
+          description: Returned when the user does not have permission to access the
+            resource.
+          content:
+            application/json:
+              schema:
+                type: object
+        "500":
+          description: Returned when an unexpected error occurs during request processing.
+          content:
+            application/json:
+              schema:
+                type: object
+        default:
+          description: An unexpected error response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/rpcStatus'
+      x-codegen-request-body-name: body
   /v1alpha/orgs/{orgId}/licenses/{serviceId}:
     get:
       tags:
@@ -316,6 +380,9 @@ components:
           type: boolean
         description:
           type: string
+    v1alphaEntitleOrgResponse:
+      title: EntitleOrgResponse is the response when entitling an org
+      type: object
     v1alphaGetLicenseResponse:
       type: object
       properties:
@@ -353,6 +420,14 @@ components:
       enum:
       - assigned
       - assignable
+    EntitleOrgRequest:
+      title: EntitleOrgRequest
+      type: object
+      properties:
+        maxSeats:
+          type: string
+          description: the amount of seats that are granted for this org.
+          format: int64
     licenses_serviceId_body:
       type: object
       properties:
